[package]
name = "gendam-desktop"
version = { workspace = true }
description = "GenDAM Desktop Application"
authors = ["Anonymous"]
default-run = "gendam-desktop"
edition = { workspace = true }
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
    "window-create",
    "window-set-size",
    "window-set-focus",
    "clipboard-all",
    "shell-all",
    "macos-private-api",
    "window-start-dragging",
    "window-minimize",
    "window-hide",
    "window-unminimize",
    "window-unmaximize",
    "window-show",
    "window-close",
    "window-maximize",
    "dialog-save",
    "dialog-confirm",
    "updater",
    "process-exit",
    "process-relaunch",
    "dialog-message",
    "os-all",
    "path-all",
    "dialog-ask",
    "dialog-open",
    "protocol-all",
    "process-command-api",
    "fs-all",
    "devtools",
] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "dbe0277824676b978ed616ddb28f988689df6f7e" } # branch = "v1" }
prisma-lib = { path = "../../../crates/prisma" }
file-downloader = { path = "../../../crates/file-downloader" }
content-library = { path = "../../../crates/content-library" }
api-server = { path = "../../api-server" }
vector-db = { path = "../../../crates/vector-db", features = ["qdrant"] }
analytics-tracing = { path = "../../../crates/analytics-tracing" }
p2p = { path = "../../../crates/p2p" }
storage = { path = "../../../crates/storage" }
global-variable = { path = "../../../crates/global-variable" }

rspc = { workspace = true }
rspc-tauri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tauri-plugin-clipboard = "1.1.4"

percent-encoding = "2.3.1"
url = { version = "2.3" }
rand = "0.8"
anyhow = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
